global campus section

--- a/index.html
+++ b/index.html
@@ -91,18 +91,25 @@
       <div class="site-container">
         <h2 id="campus-title" class="campus__title">Our Global Campus</h2>
         <div class="campus__grid">
-          <div class="campus__card">
+          <a href="/campuses/london" class="campus__card" aria-label="Learn more about Westbridge London campus">
+            <img src="img/london-campus.png" alt="Westbridge London campus exterior showing modern university building"
+              class="campus__card-image" />
             <h3 class="campus__card-title">Westbridge London</h3>
-            <img src="img/london-campus.png" alt="london campus" class="campus__card-image" />
-          </div>
-          <div class="campus__card">
+          </a>
+
+          <a href="/campuses/singapore" class="campus__card" aria-label="Learn more about Westbridge Singapore campus">
+            <img src="img/singapore-campus.png"
+              alt="Westbridge Singapore campus exterior showing contemporary university facilities"
+              class="campus__card-image" />
             <h3 class="campus__card-title">Westbridge Singapore</h3>
-            <img src="img/singapore-campus.png" alt="singapore campus" class="campus__card-image" />
-          </div>
-          <div class="campus__card">
+          </a>
+
+          <a href="/campuses/vancouver" class="campus__card" aria-label="Learn more about Westbridge Vancouver campus">
+            <img src="img/vancouver-campus.png"
+              alt="Westbridge Vancouver campus exterior showing modern university building with mountain backdrop"
+              class="campus__card-image" />
             <h3 class="campus__card-title">Westbridge Vancouver</h3>
-            <img src="img/vancouver-campus.png" alt="vancouver campus" class="campus__card-image" />
-          </div>
+          </a>
         </div>
       </div>
     </section>
